# user-registry

./: Cargo.toml  readme.md
src/: configuration.rs  lib.rs  main.rs  runner.rs  telemetry.rs
src/application/user/: handler.rs
src/domain/user/: entity.rs  error.rs  mod.rs  repository.rs  service.rs
src/infrastructure/: mod.rs
src/infrastructure/memorystore/: memory_store.rs  mod.rs
src/infrastructure/user/: repository.rs
tests/: user.rs
