[package]
name = "user_register"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "user_register"


[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.19"
tracing-subscriber= {version="0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.1"
tracing-actix-web = "0.7"
unicode-segmentation = "1.9.0"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.7.2"